<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".AddTransactionActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/edit_main_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:text="@string/transaction_details"
            android:textColor="@color/white"
            android:textColorHint="@color/grey"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_btn_share"
            android:padding="10dp"
            />
    </LinearLayout>


    <Spinner
        android:id="@+id/spinnerType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:background="@drawable/background_inputs"
        android:gravity="center"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/editTextPlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:background="@drawable/background_inputs"
        android:gravity="center"
        android:hint="@string/place_hint"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editTextAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:background="@drawable/background_inputs"
        android:gravity="center"
        android:hint="@string/amount_hint"
        android:inputType="numberDecimal"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:textSize="16sp" />


    <androidx.appcompat.widget.AppCompatButton

        android:id="@+id/btnSelectDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_weight="0.6"
        android:background="@drawable/background_inputs"
        android:gravity="center"
        android:text="@string/date_text"
        android:textColor="@color/black"
        android:textSize="16sp" />


    <Spinner
        android:id="@+id/spinnerCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/background_inputs"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:textSize="16sp" />


    <Button
        android:id="@+id/btnSaveEditTransaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/fresh_green"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/save_button"
        android:textAllCaps="false"
        android:textSize="20sp" />


</LinearLayout>